array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var x = size(num)
  var n = 0
  for (i <-0 to x-1){
    if(num(i+1)<num(i) || num(i+1)<num(i)){
      n = n +1
    }
  }
  return n
}